finishing up rating javascript

--- a/to-read-books.html
+++ b/to-read-books.html
@@ -18,8 +18,10 @@
     <header>
       <div id="branding-container">
         <a class="logo-home" href="/index.html">
-          <figure id="logo-fig"><img src="/images/books.png"></figure>
-          <h3>Book Lovers</h3>
+            <figure id="logo-fig">
+                <img src="/images/books.png">
+            </figure>
+            <h3>Book Lovers</h3>
         </a>
       </div>
       <div id="search-container">
@@ -32,11 +34,11 @@
     <main> 
       <div id="card-display">
         <div class="list-menu">
-          <h6>Search Results</h6>
+          <h6 id="search-div-heading">Books I Want To Read</h6>
           <div>
             <ul class="book-list-links">
-              <li class="book-list-element"><a id="finished-books" href="/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
-              <li class="book-list-element"><a><img class="icons" src="/images/future.png">To Read</a></li>
+              <li class="book-list-element page-underlined"><a id="finished-books" href="/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
+              <li class="book-list-element"><a id="to-read-books" class="highlighted-tab" href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
             </ul>
           </div>
         </div>
