--- a/to-read-books.html
+++ b/to-read-books.html
@@ -46,10 +46,10 @@
             </ul>
           </div>
         </div>
-        <div id="list-container">
+        <div id="read-list-container">
           <!-- where list of books will go  -->
         </div>
-        <p id="search-div-heading"></p>
+        <p id="search-div-heading">Search Results</p>
         <div class="loader"></div>
         <div id="search-results">
           <!-- where card divs will appear -->
