--- a/public/to-read-books.html
+++ b/public/to-read-books.html
@@ -41,8 +41,8 @@
 
           <div>
             <ul class="book-list-links">
-              <li class="book-list-element page-underlined"><a id="finished-books" class="highlighted-tab"href="/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
-              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
+              <li class="book-list-element page-underlined"><a id="finished-books" class="highlighted-tab"href="/finished-books.html"><img class="icons" src="/public/images/check-book.png">Finished Books</a></li>
+              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/public/images/future.png">To Read</a></li>
             </ul>
           </div>
         </div>
