--- a/public/finished-books.html
+++ b/public/finished-books.html
@@ -19,7 +19,7 @@
       <div id="branding-container">
         <a class="logo-home" href="/public/index.html">
             <figure id="logo-fig">
-                <img src="/public/images/books.png">
+                <img src="/images/books.png">
             </figure>
             <h3>Book Lovers</h3>
         </a>
@@ -42,7 +42,7 @@
           <div>
             <ul class="book-list-links">
               <li class="book-list-element page-underlined"><a id="finished-books" class="highlighted-tab"href="/public/images/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
-              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/public/images/future.png">To Read</a></li>
+              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
             </ul>
           </div>
         </div>
