--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
           <div>
             <ul class="book-list-links">
               <li class="book-list-element"><a id="finished-books" href="/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
-              <li class="book-list-element"><a><img class="icons" src="/images/future.png">To Read</a></li>
+              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
             </ul>
           </div>
         </div>
