--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   </head>
   <body>
     <header>
       <div id="branding-container">
-        <a class="logo-home" href="./index.html">
-          <figure id="logo-fig"><img src="./images/books.png"></figure>
+        <a class="logo-home" href="/index.html">
+          <figure id="logo-fig"><img src="/images/books.png"></figure>
           <h3>Book Lovers</h3>
         </a>
       </div>
@@ -35,8 +35,8 @@
           <h6>Search Results</h6>
           <div>
             <ul class="book-list-links">
-              <li class="book-list-element"><a id="finished-books" href="./finished-books.html"><img class="icons" src="./images/check-book.png">Finished Books</a></li>
-              <li class="book-list-element"><a id="to-read-books"href="./to-read-books.html"><img class="icons" src="./images/future.png">To Read</a></li>
+              <li class="book-list-element"><a id="finished-books" href="/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
+              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
             </ul>
           </div>
         </div>
@@ -53,6 +53,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="/public/index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
