fixing image links

--- a/public/finished-books.html
+++ b/public/finished-books.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div id="branding-container">
-        <a class="logo-home" href="/public/index.html">
+        <a class="logo-home" href="/index.html">
             <figure id="logo-fig">
                 <img src="/images/books.png">
             </figure>
@@ -41,8 +41,8 @@
 
           <div>
             <ul class="book-list-links">
-              <li class="book-list-element page-underlined"><a id="finished-books" class="highlighted-tab"href="/images/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
-              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
+              <li class="book-list-element page-underlined"><a id="finished-books" class="highlighted-tab" href="/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
+              <li class="book-list-element"><a id="to-read-books" href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
             </ul>
           </div>
         </div>
