--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
   <body>
     <header>
       <div id="branding-container">
-        <a class="logo-home" href="./index.html">
-          <figure id="logo-fig"><img src="./images/books.png"></figure>
+        <a class="logo-home" href="/index.html">
+          <figure id="logo-fig"><img src="/images/books.png"></figure>
           <h3>Book Lovers</h3>
         </a>
       </div>
@@ -35,8 +35,8 @@
           <h6>Search Results</h6>
           <div>
             <ul class="book-list-links">
-              <li class="book-list-element"><a id="finished-books" href="./finished-books.html"><img class="icons" src="./images/check-book.png">Finished Books</a></li>
-              <li class="book-list-element"><a id="to-read-books"href="./to-read-books.html"><img class="icons" src="./images/future.png">To Read</a></li>
+              <li class="book-list-element"><a id="finished-books" href="/finished-books.html"><img class="icons" src="/images/check-book.png">Finished Books</a></li>
+              <li class="book-list-element"><a id="to-read-books"href="/to-read-books.html"><img class="icons" src="/images/future.png">To Read</a></li>
             </ul>
           </div>
         </div>
