--- a/public/finished-books.html
+++ b/public/finished-books.html
@@ -50,6 +50,7 @@
           <!-- where list of books will go  -->
         </div>
         <p id="search-div-heading"></p>
+        <p id="search-div-heading">Search Results</p>
         <div class="loader"></div>
         <div id="search-results">
           <!-- where card divs will appear -->
